objects/SVMXC__Booking_Window__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>This object stores the definition and access rights for booking windows. Booking windows are selected in Cases and subsequently used for dispatching technicians by OptiMax engine</description>
    <fields>
        <fullName>SVMXC__Average_Slots__c</fullName>
        <description>Number of service slots per technician that can be committed in this time period. This information is used to show the number of available slots on the Booking Window selection screen</description>
        <label>Average Slots</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Booking_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the booking window to which the user has access. Reference to an existing booking window record in ServiceMax</description>
        <label>Booking Definition</label>
        <referenceTo>SVMXC__Booking_Window__c</referenceTo>
        <relationshipLabel>Users With Access To This Booking Window</relationshipLabel>
        <relationshipName>Booking_Window</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Booking_Window_Name__c</fullName>
        <description>A user-friendly name for the booking window. For example, &quot;Peak Hour Slot&quot;</description>
        <inlineHelpText>Enter a user-friendly name for this booking window. For example, &quot;After Hours&quot;</inlineHelpText>
        <label>Booking Window Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Display_Order__c</fullName>
        <description>Order in which this booking window should be displayed relative to other booking windows in the Case Booking Window selection screen.</description>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__End_Time__c</fullName>
        <description>Time when the booking window ends on any day. Represented in increments of 30 minutes</description>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:30 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:30 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:30 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:30 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this booking window can be displayed in the Booking Window selection screen for all users if the current user is not explicitly given access to any booking window records</description>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Start_Time__c</fullName>
        <description>Time when the booking window starts on any day. Represented in increments of 30 minutes</description>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:30 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:30 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:30 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:30 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the Salesforce user that has access to a booking window. Applicable only if the record type is Access</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Booking_Window</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Booking Window</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Windows</pluralLabel>
    <recordTypes>
        <fullName>SVMXC__Access</fullName>
        <active>true</active>
        <description>Lists call center users that have access to a booking window. Since an organization can have multiple booking windows across geographies, Access enables display of only those booking windows that are applicable for a local region</description>
        <label>Access</label>
    </recordTypes>
    <recordTypes>
        <fullName>SVMXC__Definition</fullName>
        <active>true</active>
        <description>Contains basic information about a booking window such as the name, time period and display order</description>
        <label>Definition</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>